--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,10 +9,12 @@
 header {
   display: flex;
   justify-content: space-between;
-  background-color: black;
-  color: white;
+  background-color:lightyellow;
+  color:darkgoldenrod;
   grid-column: 1 / span 2;
   padding: 10px 5px;
+  font-size: 16px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 form {
@@ -35,7 +37,10 @@ article {
 }
 
 nav {
-  background-color: #dee9ff;
+  background-color:coral;
+  color: white;
+  font-size: 15px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 nav p:hover {
@@ -55,4 +60,10 @@ article .body {
   background-color: red;
   color: gold;
   padding: 5px;
+}
+
+img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
